# guest-components-ext

./: Cargo.toml  Makefile  README.md
.github/workflows/: publish-artifacts.yml
attestation-agent-init/: Cargo.toml
attestation-agent-init/src/: main.rs
kbs-local-provider/kbs-local-provider/: Cargo.toml
kbs-local-provider/kbs-local-provider/src/: fifo.rs  initdata.rs  main.rs
kbs-local-provider/provider/: Cargo.toml
kbs-local-provider/provider/src/: crypto.rs  lib.rs
kbs-local-provider/provider/src/tpm/: mod.rs
