[workspace]
resolver = "2"
members = [
    "attestation-agent-init",
    "kbs-local-provider/kbs-local-provider",
    "kbs-local-provider/provider",
]

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
env_logger = "0.11"
hkdf = "0.12"
log = "0.4"
nix = { version = "0.29", features = ["fs"] }
picky-asn1-der = "0.4"
picky-asn1-x509 = "0.15"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"
tss-esapi = "7.5"
zeroize = { version = "1.8", features = ["derive"] }
