[package]
name = "kbs-local-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
base64.workspace = true
provider = { path = "../provider" }
env_logger.workspace = true
log.workspace = true
nix.workspace = true
serde.workspace = true
sha2.workspace = true
toml.workspace = true
zeroize.workspace = true
