[package]
name = "provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
hkdf.workspace = true
log.workspace = true
picky-asn1-der = { workspace = true, optional = true }
picky-asn1-x509 = { workspace = true, optional = true }
sha2.workspace = true
tss-esapi = { workspace = true, optional = true }
zeroize.workspace = true

[features]
default = ["tpm-provider"]
tpm-provider = ["tss-esapi", "picky-asn1-x509", "picky-asn1-der"]
